# main/http_server/axe-os/src/app/components/edit/edit.component.ts
@@ -184,6 +184,7 @@ export class EditComponent implements OnInit, OnDestroy, OnChanges {
           frequency: [info.frequency, [Validators.required]],
           autotuneEnabled: [info.autotuneEnabled == 1],
           autotunePerformanceMode: [info.autotunePerformanceMode == 1],
+          autotuneMaxTemp: [info.autotuneMaxTemp, [Validators.min(0), Validators.max(100)]],
           autotuneMaxVoltage: [info.autotuneMaxVoltage, [Validators.min(0)]],
           autotuneMaxFrequency: [info.autotuneMaxFrequency, [Validators.min(0)]],
           autofanspeed: [info.autofanspeed == 1, [Validators.required]],
@@ -387,6 +388,7 @@ export class EditComponent implements OnInit, OnDestroy, OnChanges {
       'frequency',
       'autotuneEnabled',
       'autotunePerformanceMode',
+      'autotuneMaxTemp',
       'autotuneMaxVoltage',
       'autotuneMaxFrequency',
       'autofanspeed',
