# main/http_server/axe-os/src/app/services/system.service.ts
@@ -224,6 +224,7 @@ export class SystemApiService {
         autotunePerformanceMode: 0,
         autotuneMaxVoltage: 0,
         autotuneMaxFrequency: 0,
+        autotuneMaxTemp: 0,
         autotune: {
           state: "stable" as const,
           stableChecks: 4,
